--- a/web/Home.html
+++ b/web/Home.html
@@ -20,7 +20,7 @@
       <h3 align="center"> Welcome </h3>
     </div>
     <div align="center">
-      Which Question you want to Publish
+      Which Question you want to Publish 1
       <div>
         <Button class="btn btn-primary" onclick="pulishQuestion('Q1')"> Question1 </Button>
         <Button class="btn btn-primary" onclick="pulishQuestion('Q2')"> Question2 </Button>
