--- a/web/Home.html
+++ b/web/Home.html
@@ -33,8 +33,8 @@
       </div>
     </div>
   </div>
-  <div style="width: 50%">
-    <canvas id="canvas" height="750" width="600"></canvas>
+  <div align="center" style="width:200px;height:400px">
+    <canvas id="canvas" style="width:100%;height:100%"></canvas>
   </div>
 </body>
 
