--- a/web/userClient.html
+++ b/web/userClient.html
@@ -18,6 +18,7 @@
 		<div>
 			<div>
 				<h3 align="center"> Welcome Guest</h3>
+				<a href="userClient.html"> USer Client</a>
 			</div>
 			<div align="center">
 				<h4 id="questionTitle"></h4>
