--- a/web/index.html
+++ b/web/index.html
@@ -7,10 +7,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pubnub/3.7.7/pubnub.min.js"></script>
+		<script src="https://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<script src="parse-1.2.13.min.js"></script>
-		<script src="pollApp.js"></script>
-		<script src="questionsData.js"></script>
+		<script src="js/parse-1.2.13.min.js"></script>
+		<script src="js/pollApp.js"></script>
+		<script src="js/questionsData.js"></script>
 
 	</head>
 
@@ -37,18 +39,13 @@
 				</div>
 				<br/>
 				<div >
-					<div id="selectedQuestionDetails">
-
-					</div>
-					<Button class="btn btn-success" onclick="createChart('Q4')">
-						Show Results
+					<Button class="btn btn-success" onclick="showResults()" style="display: none">
+						Refresh Data
 					</Button>
 				</div>
 			</div>
 		</div>
-		<div align="center" style="width:200px;height:400px;margin:auto">
-			<canvas id="canvas" style="width:100%;height:100%"></canvas>
-		</div>
+		<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 	</body>
 
 </html>
